--- a/react-2048/package.json
+++ b/react-2048/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-swipeable": "^6.2.1",
     "redux": "^4.1.2",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
